--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Game code -->
     <script type="text/javascript" src="src/threerender.js"></script>
+    <script type="text/javascript" src="src/player.js"></script>
     <script type="text/javascript" src="src/gameplay.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
 
