Player movement animations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="lib/GLTFloader.js"></script>
 
     <!-- Game code -->
+    <script type="text/javascript" src="src/constants.js"></script>
     <script type="text/javascript" src="src/threerender.js"></script>
     <script type="text/javascript" src="src/player.js"></script>
     <script type="text/javascript" src="src/gameplay.js"></script>
