--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="lib/phaser.min.js"></script>
     <script type="text/javascript" src="lib/three.js"></script>
     <script type="text/javascript" src="lib/GLTFloader.js"></script>
+    <script type="text/javascript" src="lib/noise.js"></script>
 
     <!-- Game code -->
     <script type="text/javascript" src="src/constants.js"></script>
