--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       body {
         margin: 0px;
 
-        background-color: gray;
+        background-color: black;
       }
 
       canvas {
