Add enemy to its own file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Game code -->
     <script type="text/javascript" src="src/constants.js"></script>
     <script type="text/javascript" src="src/threerender.js"></script>
+    <script type="text/javascript" src="src/basic_enemy.js"></script>
     <script type="text/javascript" src="src/player.js"></script>
     <script type="text/javascript" src="src/gameplay.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
