--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Libraries -->
     <script type="text/javascript" src="lib/phaser.min.js"></script>
     <script type="text/javascript" src="lib/three.js"></script>
-    <script type="text/javascript" src="lib/GLTFloader.js"></script>
+    <script type="text/javascript" src="lib/GLTFLoader.js"></script>
     <script type="text/javascript" src="lib/noise.js"></script>
 
     <!-- Game code -->
