Add cutscene screen

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="src/basic_enemy.js"></script>
     <script type="text/javascript" src="src/player.js"></script>
     <script type="text/javascript" src="src/gameplay.js"></script>
+    <script type="text/javascript" src="src/cutscene_screen.js"></script>
     <script type="text/javascript" src="src/intro_screens.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
 
